Took a first cut at implementing the RequestrService.

--- a/src/main/webapp/WEB-INF/messages/errors/errors.properties
+++ b/src/main/webapp/WEB-INF/messages/errors/errors.properties
@@ -1,4 +1,7 @@
 NotEmpty.jsonForm.input=The JSON input may not be empty.
+InvalidJson.jsonForm.input=Error parsing JSON: {0}.
 
 NotEmpty.componentsForm.url=The URL may not be empty.
 NotEmpty.componentsForm.method=The method may not be empty.
+
+error.request=Error making HTTP request: {0} {1}
