--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>requestr</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Perform HTTP Requests</name>
@@ -35,6 +35,12 @@
 					<groupId>org.slf4j</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>com.interzonedev</groupId>
+			<artifactId>httpagent</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 
 		<dependency>
@@ -85,11 +91,6 @@
 			<version>4.2.0.Final</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.2.1</version>
-		</dependency>
 	</dependencies>
 
 	<repositories>
