--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>com.interzonedev</groupId>
 			<artifactId>httpagent</artifactId>
-			<version>2.0.1-SNAPSHOT</version>
+			<version>2.0.1</version>
 		</dependency>
 
 		<dependency>
