--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.interzonedev</groupId>
         <artifactId>interzonedev-parent</artifactId>
-        <version>2.4.0</version>
+        <version>2.5.0</version>
     </parent>
 
     <artifactId>requestr</artifactId>
@@ -21,20 +21,20 @@
     <inceptionYear>2012</inceptionYear>
 
     <properties>
-        <spring.version>4.3.2.RELEASE</spring.version>
+        <spring.version>5.1.0.RELEASE</spring.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.interzonedev</groupId>
             <artifactId>heroku-support</artifactId>
-            <version>2.1.6</version>
+            <version>3.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>com.interzonedev</groupId>
             <artifactId>httpagent</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.2</version>
         </dependency>
 
         <dependency>
@@ -46,19 +46,19 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.1.7</version>
+            <version>1.2.3</version>
         </dependency>
 
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.2</version>
+            <version>2.9.6</version>
         </dependency>
 
         <dependency>
@@ -70,12 +70,12 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>1.1.0.Final</version>
+            <version>2.0.1.Final</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.2.4.Final</version>
+            <version>6.0.13.Final</version>
         </dependency>
     </dependencies>
 
