Fixed deprecations and tabs.

--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
                             <programs>
                                 <program>
                                     <mainClass>com.interzonedev.requestr.application.Application</mainClass>
-                                    <name>webapp</name>
+                                    <id>webapp</id>
                                 </program>
                             </programs>
                         </configuration>
